# ml-ops-course-lab11-lab

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.dev  pyproject.toml  report.md  sam-template.yaml
.github/workflows/: ci_cd_workflow.yaml  hello_world.yaml
sentiment_app/: app.py
src/scripts/: download_artifacts.py  export_classifier_to_onnx.py  export_sentence_transformer_to_onnx.py  settings.py
tests/: test_app.py
