[project]
name = "sentiment-analysis-lab"
version = "0.1.0"
description = ""
requires-python = ">=3.12"
dependencies = [
    "python-dotenv>=1.0.0",
]

[dependency-groups]
integration = [
    "ruff>=0.1.0",
    "pytest>=7.0.0",
    "httpx>=0.27.0",
    "fastapi>=0.109.0",
    "onnxruntime>=1.17.0",
    "tokenizers>=0.15.0",
    "mangum>=0.17.0"
]

deployment = [
    "boto3>=1.34.0",
    "joblib>=1.3.0",
    "scikit-learn>=1.3.0",
    "skl2onnx>=1.16.0",
    "torch>=2.2.0",
    "transformers>=4.30.0",
    "onnx>=1.15.0",
    "onnxscript>=0.5.7",
]

inference = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "onnxruntime>=1.17.0",
    "tokenizers>=0.15.0",
    "mangum>=0.17.0",
    "awslambdaric>=2.0.0",
]
